# biotron-firmware

./: .gitignore  CC.md  CHANGELOG.md  CMakeLists.txt  COMMANDS.md  Dockerfile  Makefile  README.md  SettingsDescription.md  main.c
.github/workflows/: public_release.yml  tag_vesion.yml  versioning.yml
PLSDK/: CMakeLists.txt  README.md
PLSDK/include/: PLSDK.h  tusb_config.h
PLSDK/include/PLSDK/: cap_buttons.h  commands.h  constants.h  music.h
PLSDK/src/: CMakeLists.txt  PLSDK.c  cap_buttons.c  channel.c  commands.c  music.c  usb_descriptors.c
include/: CMakeLists.txt  buttons.h  cap_buttons.h  frequency_counter.h  global.h  leds.h  ledsValue.h  midifilter.h  music.h  notes.h  params.h  raw_plant.h  settings.h  tusb_config.h
include/PLSDK/: channel.h  commands.h  constants.h  music.h
src/: CMakeLists.txt  buttons.c  cap_buttons.c  chord.c  frequency_counter.c  global.c  leds.c  midifilter.c  music.c  notes.c  params.c  raw_plant.c  settings.c  usb_descriptors.c
src/PLSDK/: CMakeLists.txt  cap_buttons.c  commands.c  music.c
